fix z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,7 +243,7 @@
 }
 
 .header__notify {
-    z-index: 2;
+    z-index: 3;
     position: absolute;
     top: 150%;
     right: 0;
@@ -808,7 +808,7 @@
     display: none;
     animation: fadeIn ease .2s; 
     border-radius: 2px;
-    z-index: 1;
+    z-index: 2;
 }
 
 /* Empty cart case
